# pettingzoo-no-thanks

./: LICENSE  README.md  pyproject.toml  requirements.txt
pettingzoo-no-thanks/: board.py  pettingzoo-no-thanks.py
pettingzoo_no_thanks/: __init__.py  env.py
tests/: conftest.py  test_api_compliance.py  test_no_thanks_env.py
