[project]
name = "pettingzoo-no-thanks"
version = "0.1.0"
description = ""
authors = [{ name = "Ivo Schols" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = ["pettingzoo (>=1.25.0,<2.0.0)", "numpy (>=2.3.2,<3.0.0)"]

[tool.poetry]
packages = [{ include = "pettingzoo_no_thanks", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
